* Fixed a weird bug that I am surprised didn't come up sooner... Some words files were using the parent element '<words>' and some were using '<strings>'. Unfortunately, AN::Tools::Strings was expecting '<strings>', so the '<words>' ones failed to load. This should have failed a very long time ago, so I am not convinced this issue is resolved yet, but at this moment it seems it is. * Fixed a small bug where '$host_stop_reason' in ScanCore was getting an undefined value and throwing warnings. * Put a conditional on $ssh_fh->disconnect to only do so if $ssh_fh is set.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/AN/Tools.pod
+++ b/AN/Tools.pod
@@ -223,7 +223,7 @@ print "The value of 'foo::bar' is: [$data->{foo}{bar}]\n";  # prints "The value 
 
 Another example, though not realistic, would be to access the word string 'an_0000' in the language 'en_CA':
 
-my $word = $an->data()->{words}{lang}{en_CA}{key}{an_0000}{content};
+my $word = $an->data()->{strings}{lang}{en_CA}{key}{an_0000}{content};
 print "Word: [$word].\n"; # prints "Word: [AN::Tools rapid development suite.]."
 
 Realistically though, you'll probably want to access strings via 'AN::Tools::String's 'get_word()' method.
