Note: This is a pretty hefty commit with very little testing. Expect bugs.
* This commits adds several new methods to AN::Tools based largely on the (now removed) functions from tools/striker-merge-dashboards.
** Added AN::Tools::Get->users_home() that takes the 'user' variable and returns that user's home directory, based on the data in /etc/passwd.
** Added AN::Tools::Get->rsa_public_key() that takes the 'user' variable and returns that user's RSA public key. If it doesn't exist, it is created via AN::Tools::Remote->generate_rsa_public_key().
** Changed all the '$param' variables to '$parameter' in AN::Tools::Get.
** Added AN::Tools::Remote->add_rsa_key_to_target() that takes 'user', 'targer', 'key' and 'password', logs into the target machine as the user, using the defined password and adds the key to the remote user's authorized_keys file, avoiding further need for passwords.
** Added AN::Tools::Remote->generate_rsa_public_key() that takes 'user' and, optionally, 'key_size' and generates a new RSA key for the named local user.
** Added AN::Tools::Remote->add_target_to_known_hosts() that takes 'user' and 'target' and scans the target and adds it's RSA fingerprint to the local user's 'known_hosts' file.
** Added AN::Tools::Remote->_check_known_hosts_for_target() that takes 'targer' and 'known_hosts' and searches the named known_hosts file for the given target.
** Added AN::Tools::Remote->_call_ssh_keyscan() that takes 'user', 'target' and 'known_hosts' and does the actual work of adding the target's fingerprint to the given 'known_hosts' file and then sets the ownership to the named user.
** Added AN::Tools::Storage->rsync() that creates an 'expect' wrapper for the given user@target and then calls the wrapper to perform an rsync call that requires a password to be entered.
** Added AN::Tools::Storage->_create_rsync_wrapper() that creates the actual expect wrapper that AN::Tools::Storage->rsync() calls.
* Basically gutted striker-merge-dashboards, moving most of it

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -320,19 +320,19 @@ The 'AN::Tools::String' module's 'get()' method was passed an empty key value.
 
 =head2 C<21>
 
-free
+The 'AN::Tools::Storage->_create_rsync_wrapper() private function was called without passing the target machine and/or target password.
 
 =head2 C<22>
 
-free
+The 'AN::Tools::Storage->rsync() method was called without a 'target' parameter. Please use 'target => <remote_machine_address>'.
 
 =head2 C<23>
 
-free
+The 'AN::Tools::Storage->rsync() method was called without a 'password' parameter. Please use 'password => <remote_users_password>'. The 'source' or 'destination' will be in the format 'user@target' and the password must be for the 'user' on the 'target' machine.
 
 =head2 C<24>
 
-free
+The 'AN::Tools::Storage->rsync() method was called without a 'source' parameter. Please use 'source => [user@target:]/path/to/source'. If the 'source' is the local machine, simply set the path. If the source is the remote machine, use 'user@target:/path/to/source'.
 
 =head2 C<25>
 
@@ -364,15 +364,15 @@ The 'AN::Tools' module tried to load the 'Fcntl' module but it failed to load or
 
 =head2 C<32>
 
-free
+The 'AN::Tools::Storage->rsync() method was called without a 'destination' parameter. Please use 'destination => [user@target:]/path/to/source'. If the 'destination' is the local machine, simply set the path. If the destination is the remote machine, use 'user@target:/path/to/source'.
 
 =head2 C<33>
 
-free
+The 'AN::Tools::Get->rsa_public_key()' method wasn't passed a 'user' parameter. Please use 'user => <local_user>' where the 'local_user' is the system users whose RSA key you want to read is.
 
 =head2 C<34>
 
-free
+The 'AN::Tools::Get->users_home()' method failed to read the requested user's home directory from '/etc/passwd'.
 
 =head2 C<35>
 
@@ -388,7 +388,7 @@ The 'AN::Tools' module detected an unknown environment. Defaulting to "html" as 
 
 =head2 C<38>
 
-free
+The 'AN::Tools::Get->users_home()' method was called without being passed a user name. Please use 'user => <user>' where the 'user' is the local system users whose home directory you want.
 
 =head2 C<39>
 
