* Added two, unfinished tools; ** tools/anvil-safe-start will eventually replace safe_anvil_start. ** tools/anvil-network-profiler will replace the old 'network-profiler' project and will be used along side tools/anvil-fio-tester to help tune Anvil! systems. * Added the new AN::Tools::Cman module which will handle cman-specific calls. * Created the AN::Tools::Storage->read_xml_file() method to read in XML files. * Did a bit more work on scan-storcli.
Signed-off-by: digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -392,15 +392,15 @@ The 'AN::Tools::Get->users_home()' method was called without being passed a user
 
 =head2 C<39>
 
-free
+The 'AN::Tools::Storage->read_xml_file()' method was passed a 'file' that was not readable.
 
 =head2 C<40>
 
-free
+The 'AN::Tools::Storage->read_xml_file()' method was called without a file name.
 
 =head2 C<41>
 
-free
+The 'AN::Tools::Storage->read_xml_file()' method was passed a hash reference that wasn't actually a hash reference.
 
 =head2 C<42>
 
