--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -428,6 +428,10 @@ The 'AN::Tools::Cman->peer_hostname()' method failed to find the local hostname 
 
 The 'AN::Tools::Get->ip()' method was called without the 'host' parameter.
 
+=head2 C<48>
+
+The 'AN::Tools::DB->initialize_db()' method was called but 'path::scancore_sql' wasn't set. This is usually caused by running a ScanCore agent without ever having run ScanCore itself on the machine.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
