* Notes for servers are now working in Striker. This closes issue #18. * Added AN::Tools::Get->server_note() which takes a server's name and digs out it's note (if any) and returns a hash reference with 'note' and 'uuid' set (the uuid being 'shared' -> 'shared_uuid'). * Added AN::Tools::Get->server_uuid() that returns the UUID of a server. When passed 'anvil => X', digs out the info for that Anvil! and checks the nodes. Without 'anvil' being set, it checks locally and then it figured out who its peer is and checks there as well. If neither node (in either case) has the server listed in 'virsh', it then looks in the /shared/definitions/${server}.xml file. The searching is handled by AN::Tools::Get->server_xml(). * Added AN::Tools::Get->server_xml() which looks for the XML definition of server by checking first for a running server on either node (as above, passing 'anvil' tells it to look on a remote pair of nodes where without 'anvil' it looks locally and then on its peer). If the server is found on neither, it looks in the /shared/definitions/${server}.xml file. * Changed AN::Tools::Get->users_home() to use 'path::etc_passwd' instead of a static path to /etc/passwd. * Renamed AN::Tools::Get->anvil_details() to AN::Tools::Get->local_anvil_details(). * Created AN::Tools::Get->remote_anvil_details() that is similar to AN::Tools::Get->local_anvil_details() but takes an anvil! name and returns the member nodes and the password.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -432,6 +432,18 @@ The 'AN::Tools::Get->ip()' method was called without the 'host' parameter.
 
 The 'AN::Tools::DB->initialize_db()' method was called but 'path::scancore_sql' wasn't set. This is usually caused by running a ScanCore agent without ever having run ScanCore itself on the machine.
 
+=head2 C<49>
+
+The 'AN::Tools::Get->server_uuid()' method was called but the 'server' value wasn't set.
+
+=head2 C<50>
+
+The 'AN::Tools::Get->remote_anvil_details()' method was called but the 'anvil' value wasn't set.
+
+=head2 C<51>
+
+The 'AN::Tools::Get->server_note()' method was called but the 'server' value wasn't set.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
