Untested commit! * Finished the AN::Tools::Check->daemon() method. * Updated tools/anvil-safe-start to wait for access to at least one ScanCore database and to wait until it can actually SSH into the peer.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -452,6 +452,10 @@ Failed to create a symbolic link.
 
 Failed to delete a file.
 
+=head2 C<54>
+
+The 'AN::Tools::Check->daemon()' method was called but the 'daemon' value wasn't set.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
