--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -456,6 +456,14 @@ Failed to delete a file.
 
 The 'AN::Tools::Check->daemon()' method was called but the 'daemon' value wasn't set.
 
+=head2 C<55>
+
+The 'AN::Tools::Check->kernel_module()' method was called but the 'module' value wasn't set.
+
+=head2 C<56>
+
+The 'AN::Tools::Check->drbd_resource()' method was called but the 'resource' value wasn't set.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
