--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -464,6 +464,10 @@ The 'AN::Tools::Check->kernel_module()' method was called but the 'module' value
 
 The 'AN::Tools::Check->drbd_resource()' method was called but the 'resource' value wasn't set.
 
+=head2 C<57>
+
+The 'AN::Tools::Log' module's 'db_transactions()' method was passed an invalid value. Only '0' (disable) and '1' (enable) are valid.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
