* Added logging (with source file and line number) to AN::Tools::DB->do_db_query(). * Fixed a missing method in AN::Tools.pm called '_error_count()' that is used to protect against infinite loops in some other methods. * Added a check to AN::Tools::Get->server_data() to error if no UUID is found for a given server name. * Fixed a bug in scan-server where AN::Tools::Get->server_data() was called without a valid UUID. * Did a touch more work on anvil-safe-start; ** Added a scanner that pauses after rgmanager is started until storage is fully up before moving on to starting servers. ** Still flushing out the start order stuff...
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -468,6 +468,10 @@ The 'AN::Tools::Check->drbd_resource()' method was called but the 'resource' val
 
 The 'AN::Tools::Log' module's 'db_transactions()' method was passed an invalid value. Only '0' (disable) and '1' (enable) are valid.
 
+=head2 C<58>
+
+The 'AN::Tools::Get' module's 'server_data()' failed to find the UUID for the named server.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
