--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -476,6 +476,90 @@ The 'AN::Tools::Get' module's 'server_data()' failed to find the UUID for the na
 
 The 'AN::Tools::Cman' module's 'boot_server()' method was not passed a 'server' name to boot.
 
+=head2 C<60>
+
+Failed to connect to any database, unable to proceed.
+
+=head2 C<61>
+
+The local machine's UUID was not read properly. It should be stored in 'sys::host_uuid' and contain hexadecimal characters in the format: '012345-6789-abcd-ef01-23456789abcd'. If this file exists and if there is a string in the file, please verify that it is structured correctly. Please do not simply replace it! All sensor data that was read by this host is mapped back to this machine using that UUID. Generating a new UUID will disconnect that historical data from this machine.
+
+=head2 C<62>
+
+The 'AN::Tools::DB' module's 'load_schema()' method was called without being passwd a database ID.
+
+=head2 C<63>
+
+The 'AN::Tools::DB' module's 'load_schema()' method was called without being passed a schema file.
+
+=head2 C<64>
+
+The 'AN::Tools::DB' module's 'load_schema()' method was passed a schema file that wasn't found.
+
+=head2 C<65>
+
+The 'AN::Tools::DB' module's 'load_schema()' method was passed a schema file was found but could not be read.
+
+=head2 C<66>
+
+Failed to read a file. The file in question and the reason for the error should be displayed.
+
+=head2 C<67>
+
+The 'AN::Tools::DB' module's 'initialize_db()' method was called without a DB ID.
+
+=head2 C<68>
+
+Failed to send an alert because the host is not yet in the ScanCore database. This can happen on the very first run of Striker when the peer is not accessible so the initial attempt to connect to the DB fails and tries to register an alert before this host gets into the DB. If this is the case, this warning can be ignored.
+
+=head2 C<69>
+
+The 'AN::Tools::Get' method's 'cgi()' method was called without an array reference of variable names to check and read.
+
+=head2 C<70>
+
+Failed to make a system call. The attempted call and the error should be in the error message.
+
+=head2 C<71>
+
+The 'AN::Tools::Cman' module's 'stop_server()' method was not passed a 'server' name to shut down.
+
+=head2 C<72>
+
+The 'AN::Tools::DB' module's 'do_db_write()' method was asked to do an UPDATE or INSERT for a database whose file handle has been closed (or was never opened). The database ID, query and server will be reported in the error message.
+
+=head2 C<73>
+
+The 'AN::Tools::Get' module's 'template()' method was called without a template file passed.
+
+=head2 C<74>
+
+The 'AN::Tools::Get' module's 'template()' method was called without a template name passed.
+
+=head2 C<75>
+
+The 'AN::Tools::Get' module's 'template()' method failed to find a template file. The missing file will be reported in the error.
+
+=head2 C<76>
+
+The 'AN::Tools::String' module's private '_process_string_replace()' method hit an infitie loop while replacing '#!replace!...!#' replacement variables. The template file and template segment will be listed in the error. If this is triggered erroneously, increase the 'sys::error_limit' value.
+
+=head2 C<77>
+
+
+
+=head2 C<78>
+
+
+
+=head2 C<79>
+
+
+
+=head2 C<80>
+
+
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
