* The new 'configre' tool can now load and save Anvil! system details! I am sure bugs remain and much testing is still needed, but it's all in place now. * Created AN::Tools::ScanCore->get_hosts() and ->get_nodes*( to gather the hosts and nodes table entries, respectively. * Created AN::Tools::Web->insert_or_update_nodes() to insert/update data into the nodes table. * Fixed some more bugs in the SQL schema. * Created 'configure' -> 'load_anvil_form()' to parse out the data from the various $an->ScanCore->get_X() methods to load the form. * Creates 'configure' -> 'save_nodes()' to save the Anvil! form data. * Moved the $an->ScanCore->get_X() calls up before the load_anvil_form() function call. * Fixed a bunch of bad calls to $an->String->get() in save_anvil_form().
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -564,6 +564,14 @@ The 'AN::Tools::Web' module's 'insert_or_update_anvils()' method tried to create
 
 The 'AN::Tools::Web' module's 'insert_or_update_anvils()' method tried to create a new Anvil! entry, but no SMTP UUID was passed in.
 
+=head2 C<82>
+
+The 'AN::Tools::Web' module's 'insert_or_update_nodes()' method was called without an Anvil! UUID.
+
+=head2 C<83>
+
+The 'AN::Tools::Web' module's 'insert_or_update_nodes()' method was called without a host UUID.
+
 
 =head1 SEE ALSO
 
