* You can now delete Anvil! systems via 'configure'! * Created AN::Tools::Get->anvil_data() which returns the details on a given Anvil! (using either and Anvil! name or UUID as input).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -572,6 +572,9 @@ The 'AN::Tools::Web' module's 'insert_or_update_nodes()' method was called witho
 
 The 'AN::Tools::Web' module's 'insert_or_update_nodes()' method was called without a host UUID.
 
+=head2 C<84>
+
+The 'AN::Tools::Get' module's 'anvil_data()' method was called but neither an Anvil! name or UUID was passed in.
 
 =head1 SEE ALSO
 
