* Added the 'Owner' table to the new 'configure' tool. * Fixed the Anvil! menu to properly set/clear the form when a user loads an anvil/owner/smtp (load blank == clear). * Added AN::Tools::Get->owner_data() for the new Owner form. * Added configure -> load_node_form() to load node data for a given UUID. * Added hidden fields for owner and anvil notes so that they are passed in when saving an Anvil! form (which doesn't present an option to edit the notes).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -576,6 +576,10 @@ The 'AN::Tools::Web' module's 'insert_or_update_nodes()' method was called witho
 
 The 'AN::Tools::Get' module's 'anvil_data()' method was called but neither an Anvil! name or UUID was passed in.
 
+=head2 C<85>
+
+The 'AN::Tools::Get' module's 'owner_data()' method was called but neither a name or UUID was passed in.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
