* Added smtp -> smtp_note for storing notes on SMTP servers in the ScanCore DB. * Added the SMTP configuration menu to the new 'configure' tool. * Added AN::Tools::Get->smtp_data() to get the SMTP server data for a given server name or UUID.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -580,6 +580,10 @@ The 'AN::Tools::Get' module's 'anvil_data()' method was called but neither an An
 
 The 'AN::Tools::Get' module's 'owner_data()' method was called but neither a name or UUID was passed in.
 
+=head2 C<86>
+
+The 'AN::Tools::Get' module's 'smtp_data()' method was called but neither a server or UUID was passed in.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
