--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -592,6 +592,10 @@ The 'AN::Tools::Get' module's 'alert_data()' method was called but neither a tar
 
 The 'AN::Tools::Web' module's 'insert_or_update_notifications()' method was called without passing in a target or UUID
 
+=head2 C<89>
+
+The 'AN::Tools::Storage' module's 'read_words()' method was called without passing in a file to read.
+
 
 =head1 SEE ALSO
 
