* Got recipients working (basically), saving a notification target now creates a recipients entry per Anvil! system (though much testing is needed). There is no way to delete a recipient yet, but that will be added soon when an Anvil! or a notification target is deleted. * Removed the concept of 'auto-add' of notification targets to new Anvil! systems. Instead, the notification level now includes "Ignore" and whatever is set there becomes the default for new Anvil! systems. Simple++. * Moved all of the AN::Tools::Web->insert_or_update_X() methods to the ScanCore module. * Fixed a bug where Striker failed to load if a server exists but didn't yet exist in the ScanCore database (similar bug when trying to view the details of a server). Also properly suppresses the DB-related options of the server when there is no entry in the DB.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -596,6 +596,18 @@ The 'AN::Tools::Web' module's 'insert_or_update_notifications()' method was call
 
 The 'AN::Tools::Storage' module's 'read_words()' method was called without passing in a file to read.
 
+=head2 C<90>
+
+The 'AN::Tools::Get' module's 'recipient_data()' method was called but no recipient, anvil or notification target UUID was passed in.
+
+=head2 C<91>
+
+The 'AN::Tools::Web' module's 'insert_or_update_recipients()' method was called without passing in an Anvil! and/or notification UUID.
+
+=head2 C<92>
+
+The 'AN::Tools::Get' module's 'server_data()' method failed to find the requested server's XML definition data.
+
 
 =head1 SEE ALSO
 
