* Created AN::Tools::ScanCore->get_manifests() to read in details about the known install manifests. * Created AN::Tools::ScanCore->parse_install_manifest(), based heavily on the old Cluster.pm->load_install_manifest() function, but with heavily cleaned up logging and using the data from AN::Tools::ScanCore->get_manifests() and the passed-in manifest UUID to gather the XML data.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -608,6 +608,14 @@ The 'AN::Tools::Web' module's 'insert_or_update_recipients()' method was called 
 
 The 'AN::Tools::Get' module's 'server_data()' method failed to find the requested server's XML definition data.
 
+=head2 C<93>
+
+The 'AN::Tools::ScanCore' module's 'parse_install_manifest()' method was not passed a manifest UUID to parse.
+
+=head2 C<93>
+
+The 'AN::Tools::ScanCore' module's 'parse_install_manifest()' method failed to find the install manifest XML data for the given UUID.
+
 
 =head1 SEE ALSO
 
