* (Mostly) got install manifest running via the ScanCore DB now (though a test install is needed to make sure it actually works). * Created AN::Tools::Get->netmask_from_ip() that simple returns the lowest IP of a subnet for a given IP (ie: 10.20.4.2/16 -> 10.20.0.0). * Created AN::Tools::ScanCore->save_install_manifest() to prep the manifest's XML and record it to the DB. * Created (but don't yet use) configure->delete_manifest().
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -612,9 +612,13 @@ The 'AN::Tools::Get' module's 'server_data()' method failed to find the requeste
 
 The 'AN::Tools::ScanCore' module's 'parse_install_manifest()' method was not passed a manifest UUID to parse.
 
-=head2 C<93>
+=head2 C<94>
 
 The 'AN::Tools::ScanCore' module's 'parse_install_manifest()' method failed to find the install manifest XML data for the given UUID.
+
+=head2 C<95>
+
+The 'AN::Tools::ScanCore' module's 'netmask_from_ip()' method was called without passing in an IP address.
 
 
 =head1 SEE ALSO
