--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -628,6 +628,10 @@ The 'AN::Tools::Remote' module's 'wait_on_peer()' method was called without pass
 
 The 'AN::Tools::Remote' module's 'wait_on_peer()' method was called without passing in a target address.
 
+=head2 C<98>
+
+The 'AN::Tools::DB' module's 'do_db_query()' couldn't sort out a Striker database ID to use.
+
 
 =head1 SEE ALSO
 
