* Finally got 'anvil-safe-stop --shed-load' working! Much testing is needed, and '--local' doesn't work yet. * Created the new AN::Tools::System module that will host methods related to controlling systems. The first method, 'poweroff', shuts down a local or remote node. * Created AN::Tools::Cman->withdraw_node() and ->_recover_rgmanager() to handle withdrawing (and recovering, if needed) a node from an Anvil!. * Added 'anvil-safe-stop --reason X' to allow the caller to define what stop_reason is set for a server that is powered off by it. * Added a note, but have NOT implemented, to have 'anvil-safe-stop --shed-load' check if one node is in the cluster and the other not to shed the already-withdrawn.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -632,6 +632,10 @@ The 'AN::Tools::Remote' module's 'wait_on_peer()' method was called without pass
 
 The 'AN::Tools::DB' module's 'do_db_query()' couldn't sort out a Striker database ID to use.
 
+=head2 C<99>
+
+
+
 
 =head1 SEE ALSO
 
