--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -630,11 +630,19 @@ The 'AN::Tools::Remote' module's 'wait_on_peer()' method was called without pass
 
 =head2 C<98>
 
-The 'AN::Tools::DB' module's 'do_db_query()' couldn't sort out a Striker database ID to use.
+The 'AN::Tools::DB' module's 'do_db_query()' method couldn't sort out a Striker database ID to use.
 
 =head2 C<99>
 
+The 'AN::Tools::ScanCore' module's 'node_state()' method was passes in a target which could not be translated to a host UUID.
 
+=head2 C<100>
+
+The 'AN::Tools::ScanCore' module's 'node_state()' method was passes in a target which does not exist in the 'nodes' database table.
+
+=head2 C<101>
+
+The 'AN::Tools::ScanCore' module's 'get_migration_target()' method was called without passing in a server name.
 
 
 =head1 SEE ALSO
