* Created AN::Tools::Striker to hold methods related to Striker-specific tasks. Created ->load_anvil() as the first working method that uses either the anvil_uuid CGI variable or a passed in UUID and loads the related Anvil!'s data into the active hash keys. * Updated AN::Tools::Web->get_cgi() added dots to the passed in CGI variable names to that all passed-in CGI variable names and values line up nicely in the log file. * Started working on making the new configure system work with the main Striker program! * Made 'configre' show the 'Back' button when a referer from Striker called it. * Big One!! Removed all of the old '$conf' entries in the main Striker program and replaced them with '$an' equivelants! I suspect there are several instances where '$an->data' is being referenced inside double-quotes, which will break things, but the bulk are properly escaped now. I've been wanting to get this done for an age!
Making good progress on the cut-over, but still lots to do before Striker is usable again.

Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -644,6 +644,18 @@ The 'AN::Tools::ScanCore' module's 'node_state()' method was passes in a target 
 
 The 'AN::Tools::ScanCore' module's 'get_migration_target()' method was called without passing in a server name.
 
+=head2 C<102>
+
+The 'AN::Tools::Striker' module's 'load_anvil()' method was called without passing in a UUID.
+
+=head2 C<103>
+
+The 'AN::Tools::Striker' module's 'load_anvil()' method was called with the UUID set but it did not appear to be a properly formatted UUID.
+
+=head2 C<104>
+
+The 'AN::Tools::Striker' module's 'load_anvil()' method was called with a valid format UUID, but it did not appear to match any known Anvil! systems.
+
 
 =head1 SEE ALSO
 
