* Created 'AN::Tools::Striker->scan_node()' and '->scan_anvil()' methods which will soon handle the traditional, direct scanning of a nodes. * Created a new 'nodes_cache' table and associated 'AN::Tools::ScanCore->insert_or_update_nodes_cache()' and '->get_nodes_cache()' methods to handle it. Also created ScanCore's 'update_db_nodes_cache()' function to sync the table as needed. This will store cached information about a given node for a given host. Example is a Striker dashboard caching a node's power check command. * Added a call to globally disable TRIGGERs when ScanCore updates it's core DB tables. Will add it to agents once I verify it works as intended.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -656,6 +656,30 @@ The 'AN::Tools::Striker' module's 'load_anvil()' method was called with the UUID
 
 The 'AN::Tools::Striker' module's 'load_anvil()' method was called with a valid format UUID, but it did not appear to match any known Anvil! systems.
 
+=head2 C<105>
+
+The 'AN::Tools::Striker' module's 'scan_node()' method was called without passing in a UUID.
+
+=head2 C<106>
+
+The 'AN::Tools::Striker' module's 'scan_node()' method was called with the UUID set but it did not appear to be a properly formatted UUID.
+
+=head2 C<107>
+
+The 'AN::Tools::Striker' module's 'scan_node()' method was called with a valid format UUID, but it did not appear to match any known nodes.
+
+=head2 C<108>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_nodes_cache()' method was called without a host UUID.
+
+=head2 C<109>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_nodes_cache()' method was called without a node UUID.
+
+=head2 C<110>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_nodes_cache()' method was called without a cache item name.
+
 
 =head1 SEE ALSO
 
