* Got caching in DB working! Created 'AN::Tools::ScanCore.pm->read_cache()' to find and return cached data. * Created 'AN::Tools::ScanCore.pm->target_power()' that can check or set the power state of a node. * Created 'AN::Tools::Striker.pm->scan_node()', '->scan_servers(), '->_gather_node_details()' and '->_parse_anvil_safe_start()' that is the start of the process of updating the scanning of an Anvil! and its nodes. This is far from done, but the actual shell calls on the nodes to gather the data appears to be working now. * Fixed a typo in the 'nodes_cache' schema.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -680,6 +680,17 @@ The 'AN::Tools::ScanCore' module's 'insert_or_update_nodes_cache()' method was c
 
 The 'AN::Tools::ScanCore' module's 'insert_or_update_nodes_cache()' method was called without a cache item name.
 
+=head2 C<111>
+
+The 'AN::Tools::ScanCore' module's 'target_power()' method was called with an invalid task. Valid tasks are 'status', 'on' and 'off'.
+
+=head2 C<112>
+
+The 'AN::Tools::ScanCore' module's 'target_power()' method was called without a target UUID.
+
+=head2 C<111>
+
+The 'AN::Tools::ScanCore' module's 'target_power()' method was called with an target UUID that wasn't mapped to a host.
 
 =head1 SEE ALSO
 
