* Decided it was smartest to create a new module for 'AN::Tools::InstallManifest.pm' and migrate the old InstallManifest.pm over. The old modules will all be retired prior to v2, despite the extra work it requires. The end-result will be a much cleaner and more consistent program. Created the following methods so far, which are basically cleaned up ports of their matching named functions. ** calculate_storage_pool_sizes ** check_connection ** check_if_in_cluster ** check_local_repo ** check_storage ** get_node_os_version ** get_partition_data ** get_storage_pool_partitions ** map_network ** parse_script_line ** read_drbd_resource_files ** run_new_install_manifest ** summarize_build_plan ** test_internet_connection ** update_install_manifest ** verify_internet_access ** verify_os ** verify_perl_is_installed ** verify_perl_is_installed_on_node * Updated 'AN::Tools::Check->ping()' to support ping tests on remote machines. Also got the no-fragmentation and payload arguments working. Also changed the old 'target' parameter to 'ping' to avoid a conflict with 'target' being used to the remote machine to connect to. * Created 'AN::Tools::Cman->migrate_server()' to, as it says on the tin, migrate servers using the anvil-migrate-servers tool. * Created 'AN::Tools::Get->manifest_data()' to get Install Manifest data for a given manifest_uuid. * Created 'AN::Tools::Striker->mark_node_as_clean_off()' and '->mark_node_as_clean_on()' to do as their names indicate; mark nodes as 'clean' off and on. * Added the action to 'configure' to delete manifests. Also created the 'manifests_menu()' as part of the on-going effort to move Install Manifest functions over. * Deleted some retired functions from the old 'Cluster.pm' and 'Common.pm'. * Updated a lot of InstallManifest.pm shell calls to use the '$an->data->{path}{X}' variables (basically regex updates to save doing it method by method as I move functions over). * Updated anvil-safe-start to clean a node's 'host_health' when it was 'sh

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -688,9 +688,42 @@ The 'AN::Tools::ScanCore' module's 'target_power()' method was called with an in
 
 The 'AN::Tools::ScanCore' module's 'target_power()' method was called without a target UUID.
 
-=head2 C<111>
+=head2 C<113>
 
 The 'AN::Tools::ScanCore' module's 'target_power()' method was called with an target UUID that wasn't mapped to a host.
+
+=head2 C<114>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_off()' method was called without passing in a node UUID.
+
+=head2 C<115>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_off()' method was called with a node UUID that does not appear to be a properly formatted UUID.
+
+=head2 C<116>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_off()' method was called with a UUID which does not appear to match any known nodes.
+
+=head2 C<117>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_on()' method was called without passing in a node UUID.
+
+=head2 C<118>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_on()' method was called with a node UUID that does not appear to be a properly formatted UUID.
+
+=head2 C<119>
+
+The 'AN::Tools::Striker' module's 'mark_node_as_clean_on()' method was called with a UUID which does not appear to match any known nodes.
+
+=head2 C<120>
+
+The 'AN::Tools::Cman' module's 'migrate_server()' method was called without passing the name of a server to migrate.
+
+=head2 C<121>
+
+The 'AN::Tools::Get' module's 'manifest_data()' method was called without passing in a manifest UUID.
+
 
 =head1 SEE ALSO
 
